using suggestion, used a toggle instead for setting termination message paths
Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-node-exporter/templates/daemonset.yaml
@@ -125,9 +125,11 @@ spec:
           resources:
             {{- toYaml . | nindent 12 }}
           {{- end }}
-          {{- if eq .Values.configureTerminationMessagePath true }}
-          terminationMessagePath: {{ .Values.terminationMessagePath }}
-          terminationMessagePolicy: {{ .Values.terminationMessagePolicy }}
+          {{- if .Values.terminationMessageParams.enabled }}
+          {{- with .Values.terminationMessageParams }}
+          terminationMessagePath: {{ .terminationMessagePath }}
+          terminationMessagePolicy: {{ .terminationMessagePolicy }}
+          {{- end }}
           {{- end }}
           volumeMounts:
             - name: proc
@@ -214,9 +216,11 @@ spec:
           resources:
           {{ toYaml .Values.kubeRBACProxy.resources | nindent 12 }}
           {{- end }}
-          {{- if eq .Values.kubeRBACProxy.configureTerminationMessagePath true }}
-          terminationMessagePath: {{ .Values.kubeRBACProxy.terminationMessagePath  }}
-          terminationMessagePolicy: {{ .Values.kubeRBACProxy.terminationMessagePolicy }}
+          {{- if .Values.terminationMessageParams.enabled }}
+          {{- with .Values.terminationMessageParams }}
+          terminationMessagePath: {{ .terminationMessagePath }}
+          terminationMessagePolicy: {{ .terminationMessagePolicy }}
+          {{- end }}
           {{- end }}
           {{- if .Values.kubeRBACProxy.containerSecurityContext }}
           securityContext:
