revert krp and terminationmsgpath back to false from true that was set for testing
Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -38,7 +38,7 @@ global:
 # Configure kube-rbac-proxy. When enabled, creates a kube-rbac-proxy to protect the node-exporter http endpoint.
 # The requests are served through the same service but requests are HTTPS.
 kubeRBACProxy:
-  enabled: true
+  enabled: false
   image:
     registry: quay.io
     repository: brancz/kube-rbac-proxy
@@ -371,7 +371,7 @@ tolerations:
 # Enable or disable container termination message settings
 # https://kubernetes.io/docs/tasks/debug/debug-application/determine-reason-pod-failure/
 terminationMessageParams:
-  enabled: true
+  enabled: false
   # If enabled, specify the path for termination messages
   terminationMessagePath: /dev/termination-log
   # If enabled, specify the policy for termination messages
