--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -361,8 +361,8 @@ nodeSelector:
   kubernetes.io/os: linux
   #  kubernetes.io/arch: amd64
 
-# Specify grace period for graceful termination of pods
-terminationGracePeriodSeconds: 30
+# Specify grace period for graceful termination of pods. Defaults to 30
+terminationGracePeriodSeconds: null
 
 tolerations:
   - effect: NoSchedule
@@ -371,7 +371,7 @@ tolerations:
 # Enable or disable container termination message settings
 # https://kubernetes.io/docs/tasks/debug/debug-application/determine-reason-pod-failure/
 terminationMessageParams:
-  enabled: false
+  enabled: true
   # If enabled, specify the path for termination messages
   terminationMessagePath: /dev/termination-log
   # If enabled, specify the policy for termination messages
