disable termination msg path
Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -371,7 +371,7 @@ tolerations:
 # Enable or disable container termination message settings
 # https://kubernetes.io/docs/tasks/debug/debug-application/determine-reason-pod-failure/
 terminationMessageParams:
-  enabled: true
+  enabled: false
   # If enabled, specify the path for termination messages
   terminationMessagePath: /dev/termination-log
   # If enabled, specify the policy for termination messages
