--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -320,11 +320,13 @@ hostRootFsMount:
 # Mount the node's proc file system (/) at /host/proc in the container
 hostProcFsMount:
   enabled: false
+  # Possible values are None, HostToContainer, and Bidirectional
   mountPropagation: HostToContainer
 
 # Mount the node's sys file system (/) at /host/sys in the container
 hostSysFsMount:
   enabled: true
+  # Possible values are None, HostToContainer, and Bidirectional
   mountPropagation: HostToContainer
 
 ## Assign a group of affinity scheduling rules
@@ -404,6 +406,7 @@ extraHostVolumeMounts: []
 #    hostPath: <hostPath>
 #    mountPath: <mountPath>
 #    readOnly: true|false
+#    https://kubernetes.io/docs/concepts/storage/volumes/#hostpath-volume-types
 #    type: "" (Default)|DirectoryOrCreate|Directory|FileOrCreate|File|Socket|CharDevice|BlockDevice
 #    mountPropagation: None|HostToContainer|Bidirectional
 
