--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -361,7 +361,7 @@ nodeSelector:
   kubernetes.io/os: linux
   #  kubernetes.io/arch: amd64
 
-# Specify grace period for graceful termination of pods. Defaults to 30
+# Specify grace period for graceful termination of pods. Defaults to 30 if null or not specified
 terminationGracePeriodSeconds: null
 
 tolerations:
